Alterações da página ferramentas

--- a/ferramentas.html
+++ b/ferramentas.html
@@ -21,22 +21,29 @@
             <li><a href="instalacao.html">Instalação</a></li>
         </ul>
     </nav>
-    <article>
+    <article class="article-ferramentas">
             <h1 class="titulos1">FERRAMENTAS</h1>
-            <h2>Branch</h2>
-            <p>Branch é uma cópia, uma versão do seu código. Você pode utlizar o Branch para desenvolver e alterar seu projeto, sem que perca as informações da versão original.
-E só depois de finalizado, será combinado a sua versão original.</p>
-            <h2>Pull Request</h2>
-            <p>Pull Request, é quando você está trabalhando em um projeto com equipe, e quer entregar aos membros seu Branch para incorporar a versão original, a equipe pode aceitar ou negar o pull request.</p>
-            <h2>Git Pull</h2>
-            <p>Git Pull é um comando, usado para buscar e baixar conteúdos de repositórios, e fazer a atualização para seu repositório, fazendo com que os conteúdos sejam iguais.</p>
+            <section class="card">
+                <h2 class="titulo-card">Branch</h2>
+                <img src="./imagens/logogit.png" class="imagem-card" alt="" width="140">
+                <p class="texto-card">Branch é uma cópia, uma versão do seu código. Você pode utlizar o Branch para desenvolver e alterar seu projeto, sem que perca as informações da versão original.
+                    E só depois de finalizado, será combinado a sua versão original.</p>
+            </section>
+            <section class="card">
+                <h2 class="titulo-card">Pull Request</h2>
+                <p class="texto-card">Pull Request, é quando você está trabalhando em um projeto com equipe, e quer entregar aos membros seu Branch para incorporar a versão original, a equipe pode aceitar ou negar o pull request.</p>
+            </section>
+            <section class="card">
+                <h2 class="titulo-card">Git Pull</h2>
+                <p class="texto-card">Git Pull é um comando, usado para buscar e baixar conteúdos de repositórios, e fazer a atualização para seu repositório, fazendo com que os conteúdos sejam iguais.</p>
+            </section>
 
     </article>
-    <aside>
-        <h2>Commit</h2>
-        <p>Commit é uma operação, sua função é enviar as alterações mais recentes de um código inicial para o repositório. Para que lá façam parte da revisão do repositório.</p>
-        <h3>Mensagem errada em um Commit</h3>
-        <p>Primeiramente vá a linha de comando, nela, navegue até o repositório em que se localiza o Commit. Para corrigir digite: "git commit --amend" e pressione Enter. Então no editor de texto edite a mensagem e salve o Commit.</p>
+    <aside class="aside-ferramentas card">
+        <h2 class="titulo-card">Commit</h2>
+        <p class="texto-card">Commit é uma operação, sua função é enviar as alterações mais recentes de um código inicial para o repositório. Para que lá façam parte da revisão do repositório.</p>
+        <h3 class="titulo-card">Mensagem errada em um Commit</h3>
+        <p class="texto-card">Primeiramente vá a linha de comando, nela, navegue até o repositório em que se localiza o Commit. Para corrigir digite: "git commit --amend" e pressione Enter. Então no editor de texto edite a mensagem e salve o Commit.</p>
     </aside>
 
 
