Junção do projeto com os códigos do pessoal

--- a/ferramentas.html
+++ b/ferramentas.html
@@ -25,13 +25,20 @@
             <h1 class="titulos1">FERRAMENTAS</h1>
             <section class="card">
                 <h2 class="titulo-card">Branch</h2>
-                <img src="./imagens/logogit.png" class="imagem-card" alt="" width="140">
+                <a href="./imagens/branch.PNG" target="_blank">
+                    <img src="./imagens/branch.PNG" class="imagem-card" alt="" width="140">
+                </a>
                 <p class="texto-card">Branch é uma cópia, uma versão do seu código. Você pode utlizar o Branch para desenvolver e alterar seu projeto, sem que perca as informações da versão original.
                     E só depois de finalizado, será combinado a sua versão original.</p>
+                <small>Clique na imagem para abri-lá.</small>
             </section>
             <section class="card">
                 <h2 class="titulo-card">Pull Request</h2>
-                <p class="texto-card">Pull Request, é quando você está trabalhando em um projeto com equipe, e quer entregar aos membros seu Branch para incorporar a versão original, a equipe pode aceitar ou negar o pull request.</p>
+                <a href="./imagens/pullrequest.PNG" target="_blank">
+                    <img src="./imagens/pullrequest.PNG" class="imagem-card" alt="" width="140">
+                </a>
+                <p class="texto-card">Pull Request, é quando você está trabalhando em um projeto com equipe, e quer entregar aos membros seu Branch para incorporar a versão original, a equipe pode aceitar ou negar o pull request. Para criar um Pull Request basta ir a aba Pull Request e seguir os comandos.</p>
+                <small>Clique na imagem para abri-lá.</small>
             </section>
             <section class="card">
                 <h2 class="titulo-card">Git Pull</h2>
