Mudança de cores e do Header do projeto

--- a/ferramentas.html
+++ b/ferramentas.html
@@ -9,18 +9,17 @@
 
 <body>
     <header>
-<!--     Edição via github online     -->
-            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral">
+        <nav>
+            <img id="banner" src="https://git-scm.com/images/logos/downloads/Git-Logo-White.png" alt="imagem lateral" style="float: left" width="90">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="plataformas.html">Plataformas</a></li>
+                <li><a href="ferramentas.html">Ferramentas</a></li>
+                <li><a href="instalacao.html">Instalação</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="plataformas.html">Plataformas</a></li>
-            <li><a href="ferramentas.html">Ferramentas</a></li>
-            <li><a href="instalacao.html">Instalação</a></li>
-        </ul>
-    </nav>
     <article class="article-ferramentas">
             <h1 class="titulos1">FERRAMENTAS</h1>
             <section class="card">
