--- a/instalacao.html
+++ b/instalacao.html
@@ -9,10 +9,8 @@
 
 <body>
     <header>
-
-            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral">
-    </header>
         <nav>
+            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral" style="float: left" width="120">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
@@ -21,6 +19,7 @@
                 <li><a href="instalacao.html">Instalação</a></li>
             </ul>
         </nav>
+    </header>
         <article>
             <h1 class="titulos1">INSTALAÇÃO</h1>
             <h2>Windows</h2>
