--- a/quemsomos.html
+++ b/quemsomos.html
@@ -9,21 +9,17 @@
 
 <body>
     <header>
-
-            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral">
-    </header>
-
         <nav>
+            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral" style="float: left" width="120">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="plataformas.html">Plataformas</a></li>
                 <li><a href="ferramentas.html">Ferramentas</a></li>
-                <li><a href="demoinsta.html">Instalação</a></li>
-                <li><a href="fontes.html">Fontes</a></li>
-                <li><a href="quemsomos.html">Quem somos</a></li>
+                <li><a href="instalacao.html">Instalação</a></li>
             </ul>
         </nav>
+    </header>
         <article>
 
         </article>
