--- a/sobre.html
+++ b/sobre.html
@@ -9,17 +9,17 @@
 
 <body>
     <header>
-        <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral">
-    </header>
-    <nav>
-        <ul>
+        <nav>
+            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral" style="float: left" width="120">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="plataformas.html">Plataformas</a></li>
                 <li><a href="ferramentas.html">Ferramentas</a></li>
                 <li><a href="instalacao.html">Instalação</a></li>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
+    </header>
 
     <article>
         <h1 class="titulos1">SOBRE</h1>
