--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral" style="float: left" width="120">
+            <img id="banner" src="imagens/logo-white.png" alt="imagem lateral" style="float: left" width="90">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
@@ -21,6 +21,7 @@
         </nav>
     </header>
         <article>
+            <section class="">
             <h1 class="titulos1">CONHECENDO O GIT</h1>
             <h2>O que é ?</h2>
             <p>Git é um Software para versionar, gerar projetos, ele é utilizado para criar qualquer site, software ou código.
@@ -28,6 +29,7 @@
                 perder nenhuma informação.
                 No Git, você não terá problema com códigos sobrescritos e perda de informações, pois as versões são armazenadas no repositório — diretório onde ficam salvos todos os arquivos do seu projeto. É possível guardar esse repositório no seu
                 computador ou, se você utilizar o GitHub, também pode ser armazenado lá.</p>
+            </section>
         </article>
         <aside>
             <img id="logo" src="imagens/logogit.png" alt="imagem lateral">
