--- a/quemsomos.html
+++ b/quemsomos.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img id="banner" src="imagens/gitzinho-sfundo.png" alt="imagem lateral" style="float: left" width="120">
+            <img id="banner" src="imagens/logo-white.png" alt="imagem lateral" style="float: left" width="90">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
