Estilização da home e fontes

--- a/ferramentas.html
+++ b/ferramentas.html
@@ -48,6 +48,10 @@
     <aside class="aside-ferramentas card">
         <h2 class="titulo-card">Commit</h2>
         <p class="texto-card">Commit é uma operação, sua função é enviar as alterações mais recentes de um código inicial para o repositório. Para que lá façam parte da revisão do repositório.</p>
+        <small>Clique na imagem para abri-lá.</small>
+        <a href="./imagens/commit.PNG" target="_blank">
+            <img src="./imagens/commit.PNG" class="imagem-aside"  alt="" width="140">
+        </a>
         <h3 class="titulo-card">Mensagem errada em um Commit</h3>
         <p class="texto-card">Primeiramente vá a linha de comando, nela, navegue até o repositório em que se localiza o Commit. Para corrigir digite: "git commit --amend" e pressione Enter. Então no editor de texto edite a mensagem e salve o Commit.</p>
     </aside>
