--- a/index.html
+++ b/index.html
@@ -20,31 +20,53 @@
             </ul>
         </nav>
     </header>
-        <article>
-            <section class="">
+        <article class="article-index">
+            <section>
+            <img id="logo" src="imagens/logogit.png" alt="imagem lateral">
             <h1 class="titulos1">CONHECENDO O GIT</h1>
-            <h2>O que é ?</h2>
-            <p>Git é um Software para versionar, gerar projetos, ele é utilizado para criar qualquer site, software ou código.
+            <p class="texto-card">Git é um Software para versionar, gerar projetos, ele é utilizado para criar qualquer site, software ou código.
                 Essa ferramenta se tornou muito útil e prática, por seu sistema de controle de versões. Isso quer dizer que cada vez que alguém altera um código existente é gerada uma nova versão para aquele projeto. Sendo assim, não corre o risco de
                 perder nenhuma informação.
                 No Git, você não terá problema com códigos sobrescritos e perda de informações, pois as versões são armazenadas no repositório — diretório onde ficam salvos todos os arquivos do seu projeto. É possível guardar esse repositório no seu
                 computador ou, se você utilizar o GitHub, também pode ser armazenado lá.</p>
             </section>
         </article>
-        <aside>
-            <img id="logo" src="imagens/logogit.png" alt="imagem lateral">
-        </aside>
+
+        <section class="centralizador">
+            <section class="card card-home">
+                <h2 class="titulo-card">Plataformas</h2>
+                <p class="texto-card">As platafromas do Git, são o GitHub e o GitLab, conheça mais.... </p>
+               <a href="plataformas.html">
+                <button>Ver Mais</button>
+               </a> 
+            </section>
+            <section class="card card-home">
+                <h2 class="titulo-card">Instalação</h2>
+                <p class="texto-card">As instalações são possíveis no Windows e no linux, veja como fazer a instalação.... </p>
+                <a href="instalacao.html">
+                    <button>Ver Mais</button>
+                </a> 
+            </section>
+            <section class="card card-home">
+                <h2 class="titulo-card">Ferramentas</h2>
+                <p class="texto-card">As ferramentas do Git são: Branch, Pull Request, Git Pull, Commit, entre outras mais. </p>
+                <a href="ferramentas.html">
+                    <button>Ver Mais</button>
+                </a> 
+            </section>
+        </section>
 
 <footer>
-    <p class="copy"> &copy; Todos direitos resevados ao grupo Power Rangers</p>
-
-    <ol>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="sobre.html">Sobre</a></li>
-    <li><a href="plataformas.html">Plataformas</a></li>
-    <li><a href="ferramentas.html">Ferramentas</a></li>
-    <li><a href="instalacao.html">Instalação</a></li>
-    </ol>
+    <section class="section-footer">
+        <p class="copy"> &copy; Todos direitos resevados ao grupo Power Rangers</p>
+        <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="plataformas.html">Plataformas</a></li>
+            <li><a href="ferramentas.html">Ferramentas</a></li>
+            <li><a href="instalacao.html">Instalação</a></li>
+        </ol>
+    </section>
 
 
 </footer>
